data/collection/fixes/descriptions/scala/scala-6906
Implicit resolution fails in 2.10 but worked in 2.9.2. I created a minimal example, to reproduce the issue. 

Both classes (ImplicitTest and ImplicitTestBrokenIn210) compile in 2.9.2 but in 2.10.0-RC5 ImplicitTestBrokenIn210 fails with the following error message:

```scala
/home/lefou/work/tmp/scala-2.10-bug/src/ImplicitBug.scala:20: error: could not find implicit value for parameter project: Project
    file = Path("tmp")
               ^
one error found
```

The implicit parameter of Path.apply has the same name as the var "project" in class Tool. Seems to be some kind of name collision. This problem also occurs, when the types of the two "project" names differs.

Here is the example code to reproduce the bug.

```scala
class Project

object Path {
  def apply(path: String)(implicit project: Project): String = path
}

class Tool {
  var project: Project = _
  var file: String = _
}

class ImplicitTest(implicit projectWithOtherName: Project) {
  new Tool() {
    file = Path("tmp")
  }
}

class ImplicitTestBrokenIn210(implicit project: Project) {
  new Tool() {
    file = Path("tmp")
  }
}
```


Kind regards and a happy new year,

Tobias Roeser